# ImHex-Plugin-Bit-View

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/content/views/: view_bit_viewer.hpp
romfs/lang/: en_US.json  languages.json  ru_RU.json
source/: plugin_bit_view.cpp
source/content/views/: view_bit_viewer.cpp
